<resources>
    <string name="app_name">Bookkr User</string>
    <string name="title_activity_login">Bookkr User Login</string>
    <string name="title_activity_home">Bookkr User</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_user_sign_up">User Registration</string>
    <string name="title_activity_order_history">Order History</string>
    <string name="title_activity_order_history_details">Order Details</string>
    <string name="title_activity_profile_edit">Edit Profile</string>
    <string name="title_activity_user_sign_up_otpverification">OTP Verification</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_forgot_password_reset">Reset Password</string>
    <string name="title_activity_money_request">Money Request</string>
    <string name="title_activity_money_request_create">Create Money Request</string>
    <string name="title_activity_requirement_list">Requirement List</string>
    <string name="title_activity_requirement_details">Requirement Details</string>
    <string name="title_activity_requirement_history_list">Claim History</string>
    <string name="title_activity_user_claim_confirm">Confirm Claim</string>
    <string name="title_activity_user_claim_details">Claim Details</string>
    <string name="title_activity_user_claim_update_details">Update Details</string>
    <string name="title_activity_user_claim_failed">Failed Claim</string>
    <string name="title_activity_user_claim_pay_fail_details">Pay Fail Details</string>
    <string name="title_activity_user_claim_update_shipping">Update Shipping</string>
    <string name="action_profile_edit">Edit Profile</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_req_history">Requirement History</string>
    <string name="error_empty_password">Password is required.</string>
    <string name="error_empty_referral_code">Referral Code is required.</string>
    <string name="error_invalid_referral_code">Referral Code is Invalid.</string>
    <string name="error_password_min_length">Password must be of minimum 4 characters.</string>
    <string name="error_no_internet">Sorry, couldn\'t find network.</string>
    <string name="error_no_data_found">Sorry, No Data Found.</string>
    <string name="error_try_later">Unable To Process Your Request, Please Try Again Later.</string>
    <string name="error_cannot_get_profile">Sorry, No User data found to get details.</string>
    <string name="error_save_profile">Sorry, Unable To Save Your Profile Data.</string>
    <string name="error_signout_unsuccessful">Error in Signout. Please Try Again Later</string>
    <string name="error_empty_mobile">Mobile Number Is Required.</string>
    <string name="error_empty_name">Name cannot be left empty.</string>
    <string name="error_empty_captcha">Enter Captcha.</string>
    <string name="error_accept_tnc">Accept Terms &amp; Conditions.</string>
    <string name="error_quantity_exceeds">Quantity Cannot Exceeds Claimed Quantity For Payment Mode.</string>
    <string name="error_empty_confirm_password">Confirm Password Is Required.</string>
    <string name="error_empty_current_password">Current Password Is Required.</string>
    <string name="error_empty_new_password">New Password Is Required.</string>
    <string name="error_empty_retype_new_password">Please Re-Type Your New Password.</string>
    <string name="error_password_confirm_no_match">Your New Password And Re-Typed Password Does Not Matched.</string>
    <string name="error_invalid_email">This Email ID address is invalid</string>
    <string name="error_empty_whatsapp_number">WhatsApp Number Is Required.</string>
    <string name="error_select_whatsapp_number">Select WhatsApp Number Type.</string>
    <string name="error_select_gender">Select Gender</string>
    <string name="error_select_payment_mode">Select Payment Mode</string>
    <string name="error_bank_name_required">Bank Name Required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_no_user_profile">Sorry, No User data found to get details.</string>
    <string name="error_empty_state">State Is Required.</string>
    <string name="error_empty_area">Area Is Required.</string>
    <string name="error_empty_pincode">Pincode Is Required.</string>
    <string name="error_empty_dob">Date Of Birth Is Required.</string>
    <string name="error_invalid_pincode">Pincode Is Invalid.</string>
    <string name="error_empty_city">City Is Required.</string>
    <string name="error_empty_address">Address Is Required.</string>
    <string name="error_invalid_mobile">Enter A Valid Mobile Number.</string>
    <string name="error_empty_mobile_no">Mobile No. is required</string>
    <string name="error_user_id_not_found">Sorry, No User Details Found To Make Query, Try Again Later.</string>
    <string name="error_try_otp_later">Unable To Send OTP, Please Try Again Later.</string>
    <string name="error_user_deactivated">User account is deactivated, Contact Help Desk.</string>
    <string name="error_empty_otp">OTP Is Required.</string>
    <string name="error_otp_mismatch">Entered OTP Is Not Matched.</string>
    <string name="error_attach_profile_image">Profile Image Not Found, Attach Image.</string>
    <string name="error_attach_document_image">Document Image Not Found, Attach Image.</string>
    <string name="error_empty_document_type">Select Document Type.</string>
    <string name="error_empty_document_number">Document Number Is Required.</string>
    <string name="error_attach_transaction_image">Transaction Screenshot Image Not Found, Attach Image.</string>
    <string name="error_attach_address_image">Address Image Not Found, Attach Image.</string>
    <string name="error_empty_transaction_id">Transaction ID Is Required.</string>
    <string name="error_empty_amount">Amount Is Required.</string>
    <string name="error_empty_modal_variant_quantity">Shipping Quantity Of Select Modal Variant Is Required</string>
    <string name="error_modal_variant_not_available">Modal Variant Not Available</string>
    <string name="error_shipping_expected_date">Select Shipping Expected Date</string>
    <string name="error_empty_cod_price">COD Price is Required</string>
    <string name="error_empty_payfail_quantity">Pay Fail Quantity is Required</string>
    <string name="error_empty_user_quantity">User Quantity is Required</string>
    <string name="error_empty_quantity">Quantity is Required</string>
    <string name="error_empty_reason">Reason is Required</string>
    <string name="error_less_req_quantity">Required Quantity is Less than User Quantity For Post.</string>
    <string name="error_empty_login_id">Login ID is Required</string>
    <string name="error_select_otp_method">Select OTP Method To Receive</string>
    <string name="error_select_whatsapp_otp_method">Select WhatsApp Number for OTP</string>
    <string name="error_select_nos_order">Select Nos Of Orders</string>
    <string name="error_claim_failed_quantity_mismatch">Failed Quantity Cannot be more than Claimed Quantity.</string>
    <string name="error_empty_time_left_mins">Time Left is Required</string>
    <string name="error_select_cod_available">Select COD Available Option</string>
    <string name="error_empty_name_on_order">Name On Order is Required</string>
    <string name="error_empty_order_value">Order Value is Required</string>
    <string name="error_empty_courier">Courier is Required</string>
    <string name="error_empty_tracking_id">Tracking ID is Required</string>
    <string name="error_empty_tracking_link">Tracking Link is Required</string>
    <string name="error_empty_courier_mobile_no">Courier Person Contact No. is Required</string>
    <string name="error_empty_delivery_pin">Delivery PIN is Required</string>
    <string name="error_empty_delivery_otp">OTP for Delivery is Required</string>
    <string name="error_select_available_for_online_pay">Please Select Pay Online Available Or Not?</string>
    <string name="progress_verifying_user">Verifying User</string>
    <string name="progress_change_password">Changing Your Password, Please Wait</string>
    <string name="progress_create_user">Creating User Account, Please Wait</string>
    <string name="progress_updating_profile">Updating User Profile, Please Wait</string>
    <string name="progress_getting_data">Getting Data, Please Wait</string>
    <string name="progress_sending_otp">Sending OTP</string>
    <string name="progress_sending_data">Sending Your Data, Please Wait</string>
    <string name="ack_account_created">Your Profile Has Been Created Successfully.</string>
    <string name="ack_account_edited">Your Profile Has Been Edited Successfully.</string>
    <string name="ack_data_saved">Your Data Has Been Saved Successfully.</string>
    <string name="ack_otp_sent">OTP Sent Successfully.</string>
    <string name="ack_money_request_added">Money Request Has Been Created Successfully.</string>
    <string name="dialog_change_password">Your Password Has Been Changed Successfully.</string>
    <string name="dialog_user_signout">Are you sure, you want to signout ? </string>
    <string name="button_login">Login</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_register_user">Register User</string>
    <string name="button_profile_edit">Update Profile</string>
    <string name="button_send_otp">Send OTP</string>
    <string name="button_verify_otp">Verify OTP</string>
    <string name="button_forgot_password">Forgot Password?</string>
    <string name="button_resend_otp">Resend OTP</string>
    <string name="button_save_changes">Save Changes</string>
    <string name="button_submit">Submit</string>
    <string name="button_create_request">Create Request</string>
    <string name="button_view_requirement">View Requirement</string>
    <string name="button_claim_now">Claim Now</string>
    <string name="button_claim">Claim</string>
    <string name="button_confirm_claim">Confirm Claim</string>
    <string name="button_update_claim_details">Claim Details</string>
    <string name="button_update_shipping">Update Shipping</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_about_us">About 7R</string>
    <string name="drawer_contact_us">Contact Us</string>
    <string name="drawer_privacy_policies">Privacy Policiey | T &amp; C</string>
    <string name="drawer_order_history">My Order History</string>
    <string name="drawer_rate_us">Rate Us</string>
    <string name="drawer_signout">Signout</string>
    <string name="drawer_address_generator">Address Generator</string>
    <string name="drawer_rate_chart">Rate Chart</string>
    <string name="drawer_share_earn">Share &amp; Earn</string>
    <string name="drawer_faq">FAQs</string>
    <string name="drawer_wallet_details">Wallet Details</string>
    <string name="drawer_saved_items">Saved Items</string>
    <string name="drawer_drop_price">Drop Price</string>
    <string name="drawer_buy_address_saved">Buy Address Saved Accs</string>
    <string name="drawer_feedback_suggestion">Feedback/Suggestion</string>
    <string name="allowed_dig_mobile">0123456789</string>
    <string name="update">Update</string>
    <string name="cod">COD</string>
    <string name="pre_paid">Pre-Paid</string>
    <string name="pay_fail">Pay Fail</string>
    <string name="otp_verified">OTP Verify</string>
    <string name="variants">Variant(s)</string>
    <string name="variant_name">Variant Name</string>
    <string name="modal_name">Modal</string>
    <string name="rate_type">Rate Type</string>
    <string name="select_rate_type">Select Rate Type</string>
    <string name="select_modal_color">Select Modal Color</string>
    <string name="modal_color">Modal Color</string>
</resources>