<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/std_content_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="left|center_vertical"
                    android:text="@string/modal_name"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/mini_text_size" />

                <TextView
                    android:id="@+id/fragment_claim_textview_modal_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/barlow_condensed_semobold"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/std2_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/std_view_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:text="@string/variants"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/mini_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:text="@string/cod"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/mini_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:text="@string/pre_paid"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/mini_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:text="@string/pay_fail"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/mini_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:text="@string/otp_verified"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/mini_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_claim_recycleview_variant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:scrollbars="none" />
            </LinearLayout>

            <Button
                android:id="@+id/fragment_button_update_shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_view_margin"
                android:layout_marginVertical="@dimen/big_view_margin"
                android:background="@drawable/round_login_button"
                android:fontFamily="@font/open_sans_semibold"
                android:onClick="userConfirmClaim"
                android:padding="@dimen/std_content_padding"
                android:text="@string/button_update_shipping"
                android:textAllCaps="false"
                android:textColor="@color/bg_color_white"
                android:textSize="@dimen/std_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>