<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/std_view_margin"
    android:elevation="@dimen/cardview_elevation"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/bg_card_color_light_grey"
    app:cardCornerRadius="@dimen/cardview_radius_std_3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/mini_content_padding">

        <TextView
            android:id="@+id/adapter_textview_vaiant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/variant_name"
            android:textColor="@color/textColorBlack"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mini_view_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modal_color"
                    android:textColor="@color/textColorBlack" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mini_view_margin"
                    app:cardBackgroundColor="@color/bg_card_color"
                    app:cardCornerRadius="@dimen/cardview_radius_std_2"
                    app:cardElevation="@dimen/cardview_no_elevation">

                    <Spinner
                        android:id="@+id/adapter_spinner_modal_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/mini_content_padding"
                        android:prompt="@string/select_modal_color"
                        android:spinnerMode="dialog" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_type"
                    android:textColor="@color/textColorBlack" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mini_view_margin"
                    app:cardBackgroundColor="@color/bg_card_color"
                    app:cardCornerRadius="@dimen/cardview_radius_std_2"
                    app:cardElevation="@dimen/cardview_no_elevation">

                    <Spinner
                        android:id="@+id/adapter_spinner_rate_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/rate_type_arrays"
                        android:padding="@dimen/mini_content_padding"
                        android:prompt="@string/select_rate_type"
                        android:spinnerMode="dialog" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/adapter_edittext_cod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/allowed_dig_mobile"
                        android:gravity="center"
                        android:hint="@string/cod"
                        android:inputType="phone"
                        android:maxLength="@integer/max_length_ids"
                        android:singleLine="true"
                        android:textSize="@dimen/std_text_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/adapter_edittext_pre_paid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/allowed_dig_mobile"
                        android:gravity="center"
                        android:hint="@string/pre_paid"
                        android:inputType="phone"
                        android:maxLength="@integer/max_length_ids"
                        android:singleLine="true"
                        android:textSize="@dimen/std_text_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/adapter_edittext_pay_fail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/allowed_dig_mobile"
                        android:gravity="center"
                        android:hint="@string/pay_fail"
                        android:inputType="phone"
                        android:maxLength="@integer/max_length_ids"
                        android:singleLine="true"
                        android:textSize="@dimen/std_text_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/adapter_edittext_otp_verified"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/allowed_dig_mobile"
                        android:gravity="center"
                        android:hint="@string/otp_verified"
                        android:inputType="phone"
                        android:maxLength="@integer/max_length_ids"
                        android:singleLine="true"
                        android:textSize="@dimen/std_text_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>